@@ -28,16 +28,17 @@ Changes:
 - Added "borderColor" option to the grid (patch from Amaury Chamayou
   and patch from Mike R. Williamson).
 
-- Added support for gradient background for the grid, take a look at
+- Added support for gradient backgrounds for the grid, take a look at
   the "setting options" example (based on patch from Amaury Chamayou,
   issue 90).
 
+- Gradient bars (suggestion by stefpet).
+  
 - Added a "plotunselected" event which is triggered when the selection
   is removed, see "selection" example (suggestion by Meda Ugo);
 
 - The option legend.margin can now specify horizontal and vertical
   margins independently (suggestion by someone who's annoyed).
-
   
 Bug fixes:
 
